@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-15T16:08:27Z",
+  "timestamp" : "2022-11-17T16:08:31Z",
   "count_outdated" : 71,
   "uniques_outdated" : 33,
-  "count" : 74,
-  "uniques" : 36,
+  "count" : 75,
+  "uniques" : 37,
   "views" : [
     {
       "timestamp": "2022-11-05T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-11-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
