@@ -1,3 +1,11 @@
+2022-11-17T16:08:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3489955874 # 622
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 33 71 / 36 74
+* notice: next accum: outdated-unq outdated-all / unq all: 33 71 / 37 75
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-17]
+
 2022-11-15T16:08:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3472129070 # 616
 * notice: last 14d: unq all: 3 3
